--- a/AmazonSearch/.classpath
+++ b/AmazonSearch/.classpath
@@ -2,41 +2,42 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/cglib-nodep-3.2.4.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/client-combined-3.3.1-nodeps.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/commons-io-2.5.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/commons-lang3-3.5.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/cssparser-0.9.21.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/gson-2.8.0.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/guava-21.0.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/hamcrest-library-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/htmlunit-2.24.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/htmlunit-core-js-2.23.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/htmlunit-driver-2.24.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/httpclient-4.5.2.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/httpcore-4.4.4.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/httpmime-4.5.2.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/javax.servlet-api-3.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/jetty-io-9.4.1.v20170120.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/jetty-util-9.4.1.v20170120.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/jna-4.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/jna-platform-4.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/neko-htmlunit-2.24.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/phantomjsdriver-1.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/selenium-server-standalone-3.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/serializer-2.7.2.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/websocket-api-9.2.20.v20161216.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/websocket-client-9.2.20.v20161216.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/websocket-common-9.2.20.v20161216.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/xalan-2.7.2.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/xercesImpl-2.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/selenium-java-3.3.1/lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="lib" path="C:/selenium/webdriver-factory-2.1.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/xercesImpl-2.11.0.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/xalan-2.7.2.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/websocket-common-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/websocket-client-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/websocket-api-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/webdriver-factory-2.1.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/serializer-2.7.2.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/selenium-server-standalone-3.5.3.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/phantomjsdriver-1.4.0.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/neko-htmlunit-2.27.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/jetty-util-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/jetty-io-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/jetty-http-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/jetty-client-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/httpmime-4.5.3.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/htmlunit-driver-2.27.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/htmlunit-core-js-2.27.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/htmlunit-2.27.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/guava-23.0.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/cssparser-0.9.23.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/commons-lang3-3.5.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/commons-io-2.5.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/client-combined-3.5.3-nodeps.jar"/>
+	<classpathentry kind="lib" path="/opt/selenium/cglib-nodep-3.2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
